--- a/<Video>.html
+++ b/<Video>.html
@@ -26,6 +26,27 @@
     <!--  -->
     <h1>¡VIDEO!</h1>
 
+    <div class="Pumpe">
+       <video src="Pumpeaños.mp4" height="880"
+       width="658" controls preload="auto"></video>
+    </div>
+
+<div class="shock">
+
+    <figure>
+
+        <img src="shock.jpg" alt=""
+        height="250" width="250">
+
+        <figcaption>Encuentro lógico <br>
+        que tus amigos te deseen <br>
+    un feliz cumpleaños.</figcaption>
+    </figure>
+</div>
+
+<img src="void.png" alt=""
+height="50" width="50">
+
     <!--  -->
 </body>
 
