--- a/<Happy_birthday_sweetheart>.html
+++ b/<Happy_birthday_sweetheart>.html
@@ -267,19 +267,14 @@ height="200"
 <!-- Contenedor del logicas y fanatico de las ballenas -->
 <div class="Shockwave">
 
-<h1>
 
-Coming <br>
-soon...
 
-</h1>
 
-<!--
 
-     Página donde está el video de tus amiwitos 
+     <!--Página donde está el video de tus amiwitos -->
     <a href="<Video>.html">
 
-         Imagen de Shockwave 
+       <!--  Imagen de Shockwave -->
     <img 
     src="239 sin título_20250915133843.png" 
     alt="Shockwave tikito"
@@ -287,9 +282,9 @@ soon...
     height="300"
     >
 
-    Fin del botón 
+      <!-- Fin del botón -->
 </a>
- -->
+
 
 
 
@@ -307,7 +302,7 @@ soon...
 <div class="Soundwave-texto">
 
     <!-- Texto -->
-<h6><br>Soundwave tiene algo que reproducir para ti</h6>
+<h6>(1)<br>Soundwave tiene algo que reproducir para ti</h6>
 
 <!-- Fin del contenedor de Soundwave -->
 </div>
@@ -316,7 +311,7 @@ soon...
 <div class="Starscream-texto">
 
     <!-- Texto -->
-<h6><br>Starscream tiene algo para leerte</h6>
+<h6>(3)<br>Starscream tiene algo para leerte</h6>
 
 <!-- Fin del contenedor de Starscream -->
 </div>
@@ -328,8 +323,8 @@ soon...
 
    <!-- Texto  -->
 
-   <!-- <h6>(2)<br>Shockwave tiene algo cientifico para mostrarte</h6> -->
-<h6><br>(Es una sorpresa para más adelante)</h6>
+   <h6>(2)<br>Shockwave tiene algo cientifico para mostrarte</h6> 
+
  
 
 <!-- Fin del contenedor de Shockwave -->
